workloads/ingress/hive-io-frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hive-io-frontend-ingress
  namespace: hive
spec:
  ingressClassName: nginx
  rules:
  - host: hive.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hive-io-frontend-svc
            port:
              number: 8080
